@@ -23,8 +23,6 @@ import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 public final class BootstrapClassLoaderUtil {
-  public static final @NonNls String CLASSPATH_ORDER_FILE = "classpath.txt";
-
   private static final String PROPERTY_IGNORE_CLASSPATH = "ignore.classpath";
   private static final String PROPERTY_ALLOW_BOOTSTRAP_RESOURCES = "idea.allow.bootstrap.resources";
   private static final String PROPERTY_ADDITIONAL_CLASSPATH = "idea.additional.classpath";
@@ -53,9 +51,7 @@ public final class BootstrapClassLoaderUtil {
       return result;
     }
 
-    Collection<Path> classpath = new LinkedHashSet<>();
-    parseClassPathString(System.getProperty("java.class.path"), classpath);
-    addIdeaLibraries(distDir, classpath);
+    Collection<Path> classpath = computeClassPath(distDir.resolve("lib"));
     parseClassPathString(System.getProperty(PROPERTY_ADDITIONAL_CLASSPATH), classpath);
 
     Path pluginDir = Path.of(PathManager.getPreInstalledPluginsPath());
@@ -164,7 +160,7 @@ public final class BootstrapClassLoaderUtil {
       if (ideVersion != null) {
         SimpleVersion sinceVersion = null;
         SimpleVersion untilVersion = null;
-        try (BufferedReader reader = Files.newBufferedReader(Paths.get(PathManager.getPluginsPath()).resolve(MARKETPLACE_PLUGIN_DIR).resolve("platform-build.txt"))) {
+        try (BufferedReader reader = Files.newBufferedReader(Path.of(PathManager.getPluginsPath()).resolve(MARKETPLACE_PLUGIN_DIR).resolve("platform-build.txt"))) {
           sinceVersion = SimpleVersion.parse(reader.readLine());
           untilVersion = SimpleVersion.parse(reader.readLine());
         }
@@ -178,15 +174,17 @@ public final class BootstrapClassLoaderUtil {
     return true;
   }
 
-  private static void addIdeaLibraries(@NotNull Path distDir, @NotNull Collection<Path> classpath) throws IOException {
-    Path classPathFile = (SystemInfoRt.isMac ? distDir.resolve("Resources") : distDir).resolve(CLASSPATH_ORDER_FILE);
+  private static @NotNull Collection<Path> computeClassPath(@NotNull Path libDir) throws IOException {
+    Collection<Path> classpath = new LinkedHashSet<>();
+
+    Path classPathFile = libDir.resolve("classpath.txt");
     try (Stream<String> stream = Files.lines(classPathFile)) {
       stream.forEach(jarName -> {
         if (!jarName.isEmpty()) {
-          classpath.add(distDir.resolve(jarName));
+          classpath.add(libDir.resolve(jarName));
         }
       });
-      return;
+      return classpath;
     }
     catch (NoSuchFileException ignored) {
     }
@@ -195,14 +193,17 @@ public final class BootstrapClassLoaderUtil {
     }
 
     // no classpath file - compute classpath
+    parseClassPathString(System.getProperty("java.class.path"), classpath);
+
     Class<BootstrapClassLoaderUtil> aClass = BootstrapClassLoaderUtil.class;
     String selfRootPath = PathManager.getResourceRoot(aClass, "/" + aClass.getName().replace('.', '/') + ".class");
     assert selfRootPath != null;
-    Path selfRoot = Paths.get(selfRootPath);
+    Path selfRoot = Path.of(selfRootPath);
     classpath.add(selfRoot);
-    Path libFolder = Paths.get(PathManager.getLibPath());
+    Path libFolder = Path.of(PathManager.getLibPath());
     addLibraries(classpath, libFolder, selfRoot);
     addLibraries(classpath, libFolder.resolve("ant/lib"), null);
+    return classpath;
   }
 
   private static void addLibraries(Collection<Path> classPath, Path fromDir, @Nullable Path selfRoot) throws IOException {
@@ -228,14 +229,9 @@ public final class BootstrapClassLoaderUtil {
       return;
     }
 
-    String libPath = PathManager.getLibPath();
     StringTokenizer tokenizer = new StringTokenizer(pathString, File.pathSeparator + ',', false);
     while (tokenizer.hasMoreTokens()) {
-      String pathItem = tokenizer.nextToken();
-      if (!pathItem.startsWith(libPath)) {
-        // we need to add paths from lib directory in the order specified in order.txt, so don't add them at this stage
-        classpath.add(Paths.get(pathItem));
-      }
+      classpath.add(Path.of(tokenizer.nextToken()));
     }
   }
 
