@@ -3,68 +3,51 @@ package de.plushnikov.intellij.plugin.jps;
 
 import com.intellij.compiler.server.BuildProcessParametersProvider;
 import com.intellij.openapi.application.ReadAction;
-import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.roots.OrderEntry;
-import com.intellij.openapi.roots.ProjectRootManager;
-import com.intellij.psi.JavaPsiFacade;
-import com.intellij.psi.PsiDirectory;
-import com.intellij.psi.PsiPackage;
-import com.intellij.psi.util.CachedValueProvider;
-import com.intellij.psi.util.CachedValuesManager;
+import com.intellij.pom.java.LanguageLevel;
+import com.intellij.psi.util.PsiUtil;
 import de.plushnikov.intellij.plugin.Version;
+import de.plushnikov.intellij.plugin.util.LombokLibraryUtil;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public final class LombokBuildProcessParametersProvider extends BuildProcessParametersProvider {
-  private static final Logger LOG = Logger.getInstance(LombokBuildProcessParametersProvider.class);
 
   private final Project myProject;
 
-  public LombokBuildProcessParametersProvider(Project project) {
+  public LombokBuildProcessParametersProvider(@NotNull Project project) {
     myProject = project;
   }
 
   @Override
   public @NotNull List<String> getVMArguments() {
-    if (isVersionLessThan1_18_16(myProject)) {
-      return Collections.singletonList("-Djps.track.ap.dependencies=false");
+    if(!ReadAction.nonBlocking(() -> LombokLibraryUtil.hasLombokLibrary(myProject)).executeSynchronously()) {
+      return Collections.emptyList();
     }
-    return super.getVMArguments();
-  }
 
-  private boolean isVersionLessThan1_18_16(Project project) {
-    return CachedValuesManager.getManager(project).getCachedValue(project, () -> {
-      Boolean isVersionLessThan;
-      try {
-        isVersionLessThan = ReadAction.nonBlocking(
-          () -> isVersionLessThanInternal(project, Version.LAST_LOMBOK_VERSION_WITH_JPS_FIX))
-          .executeSynchronously();
-      } catch (ProcessCanceledException e) {
-        throw e;
-      } catch (Throwable e) {
-        isVersionLessThan = false;
-        LOG.error(e);
-      }
-      return new CachedValueProvider.Result<>(isVersionLessThan, ProjectRootManager.getInstance(project));
-    });
-  }
+    List<String> result = new ArrayList<>();
 
-  private boolean isVersionLessThanInternal(@NotNull Project project, @NotNull String version) {
-    PsiPackage aPackage = JavaPsiFacade.getInstance(project).findPackage("lombok.experimental");
-    if (aPackage != null) {
-      PsiDirectory[] directories = aPackage.getDirectories();
-      if (directories.length > 0) {
-        List<OrderEntry> entries =
-          ProjectRootManager.getInstance(project).getFileIndex().getOrderEntriesForFile(directories[0].getVirtualFile());
-        if (!entries.isEmpty()) {
-          return Version.isLessThan(entries.get(0), version);
-        }
-      }
+    final String lombokVersion = LombokLibraryUtil.getLombokVersionCached(myProject);
+    if (Version.isLessThan(lombokVersion, Version.LAST_LOMBOK_VERSION_WITH_JPS_FIX)) {
+      result.add("-Djps.track.ap.dependencies=false");
     }
-    return false;
+
+    if (PsiUtil.getLanguageLevel(myProject).isAtLeast(LanguageLevel.JDK_16) &&
+        Version.isLessThan(lombokVersion, Version.LOMBOK_VERSION_WITH_JDK16_FIX)) {
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
+      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED");
+    }
+    return result;
   }
 }
